# prototype-db-2

./: .gitignore  CMakeLists.txt  README.md
benchmark/: storage_engine_benchmark.cc
build-support/: run-clang-tidy.py
cmake_modules/: FindClangTools.cmake  FindGoogleBenchmark.cmake  FindJemalloc.cmake  FindLibuv.cmake
docs/: coding-style-guide.md  vscode-guide.md
src/: grpc_server.cc  grpc_server.h  main.cc  std_map_storage_engine.cc  std_map_storage_engine.h  storage_engine.h
src/proto/: protodb2.proto
